# aidb

./: .gitignore  Cargo.toml  README.md  Trunk.toml  gen_sql.py  index.html  styles.css
.github/workflows/: build.yml
aidb-cli/: Cargo.toml
aidb-cli/src/: main.rs  mysql.rs
aidb-core/: Cargo.toml
aidb-core/src/: btree.rs  cache.rs  data.rs  lib.rs  query.rs  schema.rs  select.rs  sql.rs  storage.rs  superblock.rs
aidb-worker/: Cargo.toml
archive/: Cargo.toml
archive/src/: lib.rs
src/: app.rs  main.rs  worker.rs
