[package]
name = "aidb"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1"
futures = "0.3"
gloo-worker = "0.5"
js-sys = "0.3"
leptos = { version = "0.7", features = ["csr", "nightly"] }
leptos-use = "0.15"
leptos_meta = "0.7"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
stylers = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[workspace]
members = ["aidb-core", "aidb-cli", "aidb-worker"]
