[package]
name = "aidb"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/app.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[dependencies]
aidb-core = { workspace = true }
console_error_panic_hook = { workspace = true }
futures = { workspace = true }
gloo-worker = { workspace = true }
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos-use = "0.15"
leptos_meta = "0.8"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
stylers = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Selection", "Window", "Range", "WorkerGlobalScope", "Performance", "Element"] }
opendal = { workspace = true, features = ["services-opfs"] }

[workspace]
members = ["aidb-core", "aidb-cli", "archive"]

[workspace.dependencies]
aidb-core = { path = "./aidb-core" }
archive = { path = "./archive" }
console_error_panic_hook = "0.1"
eyre = "0.6"
futures = "0.3"
gloo-worker = { version = "0.5", features = ["futures"] }
serde = { version = "1", features = ["derive"] }
opendal = { version = "0.53", default-features = false }
tracing = "0.1"
