[package]
name = "aidb-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
aidb-core = { path = "../aidb-core" }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = { version = "3.0", features = ["tracing"], default-features = false }
ctrlc = "3.4.6"
eyre = "0.6.12"
futures = "0.3.31"
opendal = { version = "0.53", features = ["services-fs", "services-monoiofs"] }
opensrv-mysql = "0.7.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time" ] }
