[package]
name = "archive"
version = "0.1.0"
edition = "2024"

[dependencies]
tar = "0.4"
zstd = "0.13"
opendal = { workspace = true }
futures = { workspace = true }
eyre = { workspace = true }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
opendal = { workspace = true, features = ["services-memory"] }
